--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
 	"dependencies": {
 		"@astrojs/react": "^2.0.2",
 		"@astrojs/tailwind": "^3.0.1",
+		"@astrojs/vercel": "^3.1.4",
 		"@contentful/rich-text-html-renderer": "^16.0.2",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
-		"astro": "^2.0.4",
+		"astro": "^2.0.17",
 		"contentful": "^9.3.3",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
